Fixed spacing issues on the Add page and managed to get the footer to stay put

--- a/assets/styles/abstracts/_mixins.scss
+++ b/assets/styles/abstracts/_mixins.scss
@@ -26,3 +26,9 @@ $desktop-width: 1024px;
   justify-content: $justify;
   align-items: $align;
 }
+
+@mixin supermobile {
+  @media (min-width: #{$mobile-width}) and (max-width: #{$desktop-width - 1px}) {
+    @content;
+  }
+}
