--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -3,11 +3,12 @@
 
 footer {
         font-family: $oswald-font;
-        //position:fixed;
+        position: fixed, bottom;
         bottom: $no-margin;
         width: 100vw;
         max-width: $max-w;
         background-color: color(accent2);
         height: 10vh;
         text-align: center;
+        
     }
